larger island margin spaceship uv map

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <script type="text/javascript" src="res/bunnyYZ.obj.json"></script>
 <script type="text/javascript" src="res/crossYZ.obj.json"></script>
-<script type="text/javascript" src="res/sship-pointyc-tidy1-uv3-YZ-p04scale.obj.json"></script>
+<script type="text/javascript" src="res/sship-pointyc-tidy1-uv5-YZ-p04scale.obj.json"></script>
 
 <script type="text/javascript">
 
@@ -455,7 +455,7 @@ function init(){
 	initTexture(bunnyTexture, "res/BunnyTexComboFR80pc.png");	//0.8 albedo
 	initTexture(bunnyTextureP5, "res/BunnyTexComboFR50pc.png");	//0.8 albedo
 	
-	initTexture(sshipTextureP4, "res/	SshipTexComboFR40pc.png");	// 0.4 albedo (normalised by *2.5)
+	initTexture(sshipTextureP4, "res/SshipTexCombouv5FR40pc.png");	// 0.4 albedo (normalised by *2.5)
 	
 	initBuffers();
 	gl.clearColor(0.5, 1.0, 1.0, 1.0);
