--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 <script type="text/javascript" src="res/crossYZ.obj.json"></script>
 <script type="text/javascript" src="res/sship-pointyc-tidy1-uv5-YZ-p04scale.obj.json"></script>
 <script type="text/javascript" src="res/sky/skybox_minus10scale.obj.json"></script>
+<script type="text/javascript" src="res/text/text.obj.json"></script>
 
 <script type="text/javascript">
 
@@ -181,6 +182,7 @@ var bunnyBuffers={};
 var crossBuffers={};
 var sshipBuffers={};
 var skyboxBuffers={};
+var textBuffers={};
 
 function initBuffers(){
 	
@@ -201,6 +203,10 @@ function initBuffers(){
 	var skyboxObject = loadBlenderExport(skyboxData);
 	delete skyboxObject.normals;	//because current shader doesn't use
 	loadBufferData(skyboxBuffers, skyboxObject);
+	
+	var textObject = loadBlenderExport(textData);
+	delete textObject.normals;
+	loadBufferData(textBuffers, textObject);
 	
 	function bufferArrayData(buffer, arr, size){
 		gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
@@ -325,6 +331,11 @@ function drawWorldScene(frameTime) {
 		texToUse = sshipTextureP4;
 		currentAlbedo=0.4;
 		break;
+		case 'text 0.8':
+		objToDraw = textBuffers;	//todo connect tex and obj in a single object.
+		texToUse = textTexture;
+		currentAlbedo=0.8;
+		break;
 	}
 	
 	mat4.set(playerCamera, mvMatrix)
@@ -444,6 +455,7 @@ var bunnyTexture={};
 var bunnyTextureP5={};
 var sshipTextureP4={};
 var skyboxTexture={};
+var textTexture={};
 
 var turnAng=Math.PI/2;
 var pitchAng=0;
@@ -456,7 +468,7 @@ function init(){
 	
 	gui = new dat.GUI();	//TODO
 
-	var objectOptions = ['cross 0.8', 'cross 0.5', 'bunny 0.8', 'bunny 0.5', 'spaceship 0.4'];
+	var objectOptions = ['cross 0.8', 'cross 0.5', 'bunny 0.8', 'bunny 0.5', 'spaceship 0.4','text 0.8'];
 	gui.add(guiParams, 'objectToDraw', objectOptions);
 	
 	gui.add(guiParams, 'rMin', 0, 1, 0.1);
@@ -525,6 +537,8 @@ function init(){
 	initTexture(sshipTextureP4, "res/SshipTexCombouv5FR40pc.png");	// 0.4 albedo (normalised by *2.5)
 	
 	initTexture(skyboxTexture, "res/sky/Gradient.png");	//skybox (emmissive)
+	
+	initTexture(textTexture, "res/text/combo.png");	//skybox (emmissive)
 	
 	
 	
